--- a/front/site/paginas/css/index.css
+++ b/front/site/paginas/css/index.css
@@ -39,7 +39,13 @@
 
 .tabs input:nth-of-type(1):checked ~ .botoes label:nth-of-type(1),
 .tabs input:nth-of-type(2):checked ~ .botoes label:nth-of-type(2),
-.tabs input:nth-of-type(3):checked ~ .botoes label:nth-of-type(3)
+.tabs input:nth-of-type(3):checked ~ .botoes label:nth-of-type(3),
+.tabs input:nth-of-type(4):checked ~ .botoes label:nth-of-type(4),
+.tabs input:nth-of-type(5):checked ~ .botoes label:nth-of-type(5),
+.tabs input:nth-of-type(6):checked ~ .botoes label:nth-of-type(6),
+.tabs input:nth-of-type(7):checked ~ .botoes label:nth-of-type(7),
+.tabs input:nth-of-type(8):checked ~ .botoes label:nth-of-type(8)
+
 {
     opacity: 1;
     width: 50px;
@@ -47,7 +53,7 @@
 
 .conteudo{
     position: relative;
-    width: 300vw;
+    width: 800vw;
     display: flex;
     transition: .5s;
 }
@@ -74,6 +80,22 @@
 .conteudo .caixa:nth-of-type(3){
     background: linear-gradient(90deg, #9d50bb, #6e48aa);
 }
+.conteudo .caixa:nth-of-type(4){
+    background:  linear-gradient(90deg, #1d3e34, #5a95cf);
+}
+.conteudo .caixa:nth-of-type(5){
+    background:  linear-gradient(90deg, #a01113, #93832f);
+}
+.conteudo .caixa:nth-of-type(6){
+    background:  linear-gradient(90deg,  #9d50bb, #c7d80f);
+}
+.conteudo .caixa:nth-of-type(7){
+    background:  linear-gradient(90deg,  #1d0934, #880693);
+}
+.conteudo .caixa:nth-of-type(8){
+    background:  linear-gradient(90deg,  #17ed82, #115a3f);
+}
+
 
 
 .tabs input:nth-of-type(1):checked ~ .conteudo{
@@ -86,6 +108,21 @@
 
 .tabs input:nth-of-type(3):checked ~ .conteudo{
     left: -200vw;
+}
+.tabs input:nth-of-type(4):checked ~ .conteudo{
+    left: -300vw;
+}
+.tabs input:nth-of-type(5):checked ~ .conteudo{
+    left: -400vw;
+}
+.tabs input:nth-of-type(6):checked ~ .conteudo{
+    left: -500vw;
+}
+.tabs input:nth-of-type(7):checked ~ .conteudo{
+    left: -600vw;
+}
+.tabs input:nth-of-type(8):checked ~ .conteudo{
+    left: -700vw;
 }
 
 .conteudo .caixa .conteudocx{
