--- a/front/site/paginas/css/index.css
+++ b/front/site/paginas/css/index.css
@@ -12,10 +12,12 @@
     overflow: hidden;
  }
 
+
  .tabs input{
       visibility: hidden;
       display: none;
 }
+
 
 .botoes{
     position: absolute;
@@ -27,6 +29,7 @@
     z-index: 1;
 }
 
+
 .botoes label{
     width: 20px;
     height: 20px;
@@ -37,6 +40,7 @@
     transition: .5s;
 }
 
+
 .tabs input:nth-of-type(1):checked ~ .botoes label:nth-of-type(1),
 .tabs input:nth-of-type(2):checked ~ .botoes label:nth-of-type(2),
 .tabs input:nth-of-type(3):checked ~ .botoes label:nth-of-type(3),
@@ -46,10 +50,12 @@
 .tabs input:nth-of-type(7):checked ~ .botoes label:nth-of-type(7),
 .tabs input:nth-of-type(8):checked ~ .botoes label:nth-of-type(8)
 
+
 {
     opacity: 1;
     width: 50px;
 }
+
 
 .conteudo{
     position: relative;
@@ -67,34 +73,41 @@
     user-select: none;
     padding: 40px;
 
+
 }
+
 
 .conteudo .caixa:nth-of-type(1){
-    background: linear-gradient(90deg, #43cea2, #185a9d);
+    background: #BF8C60;
 }
+
 
 .conteudo .caixa:nth-of-type(2){
-    background: linear-gradient(90deg, #ff4e50, #f9d423);
+    background: #6C9BD9;
 }
 
+
 .conteudo .caixa:nth-of-type(3){
-    background: linear-gradient(90deg, #9d50bb, #6e48aa);
+    background: #BF4E4E;
 }
 .conteudo .caixa:nth-of-type(4){
-    background:  linear-gradient(90deg, #1d3e34, #5a95cf);
+    background: #036d03;
 }
 .conteudo .caixa:nth-of-type(5){
-    background:  linear-gradient(90deg, #a01113, #93832f);
+    background:  #8C837B;
 }
 .conteudo .caixa:nth-of-type(6){
-    background:  linear-gradient(90deg,  #9d50bb, #c7d80f);
+    background:#A64B29;
 }
 .conteudo .caixa:nth-of-type(7){
-    background:  linear-gradient(90deg,  #1d0934, #880693);
+    background:#386273;
 }
 .conteudo .caixa:nth-of-type(8){
-    background:  linear-gradient(90deg,  #17ed82, #115a3f);
+    background:#A61212;
 }
+
+
+
 
 
 
@@ -102,9 +115,11 @@
     left: 0;
 }
 
+
 .tabs input:nth-of-type(2):checked ~ .conteudo{
     left: -100vw;
 }
+
 
 .tabs input:nth-of-type(3):checked ~ .conteudo{
     left: -200vw;
@@ -125,6 +140,7 @@
     left: -700vw;
 }
 
+
 .conteudo .caixa .conteudocx{
     display: flex;
     flex-direction: column;
@@ -132,7 +148,9 @@
     align-items: center;
     gap: 10px;
 
+
 }
+
 
 .conteudo .caixa .conteudocx ion-icon{
     font-size: 12em;
@@ -140,10 +158,12 @@
     --ionicon-stroke-width: 16px;
 }
 
+
 .conteudo .caixa .conteudocx h2{
     font-size: 3em;
     color: #ffff;
 }
+
 
 .conteudo .caixa .conteudocx p{
     font-size: 1em;
@@ -151,6 +171,7 @@
     max-width: 700px;
     text-align: center;
 }
+
 
 .conteudo .caixa .conteudocx button{
     font-size: 1.2em;
@@ -166,104 +187,8 @@
     transition: .3s;
 }
 
+
 .conteudo .caixa .conteudocx button:hover{
     letter-spacing: .2em;
-    
-}
-
-header::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background-color: #000;
-}
-
-.lista-nav {
-    display: flex;
-    justify-content: flex-start;
-    list-style: none;
-    padding: 20px 0 20px 0;
-}
-
-.lista-nav>li>a {
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-ul {
-    list-style: none;
-}
-
-ul li {
-    display: inline-block;
-    position: relative;
-}
-
-ul li a {
-    display: block;
-    padding: 10px 40px;
-    color: #000;
-    text-decoration: none;
-    text-align: left;
-    font-size: 16px;
-}
-
-ul li ul.dropdown li {
-    display: block;
-}
-
-ul li ul.dropdown {
-    width: 100%;
-    position: absolute;
-    z-index: 999;
-    display: none;
-}
-
-ul li:hover ul.dropdown {
-    display: block;
-}
-
-ul li ul.dropdown a {
-    opacity: 0.5;
-}
-
-
-ul li ul.dropdown a:hover {
-    opacity: 1;
-    color: #fff;
-}
-
-.dropdown>li>a {
-    padding: 10px 50px 10px 10px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.dropdown>#margin-top-dropdown>a {
-    margin-top: 20px;
-}
-
-#seta-baixo {
-    display: inline-block;
-    position: relative;
-    bottom: 2px;
-}
-
-#link-home>a,
-#link-grecia>a {
-    padding-bottom: 8px;
-}
-
-#link-home:hover::after {
-    content: "";
-    height: 2px;
-    background-color: pink;
-    margin-left: 25px;
-    display: block;
-    width: 70%;
-    transition: .5s;
-    animation-name: hover-animation;
-    animation-duration: .2s;
-    animation-iteration-count: 1;
-    animation-timing-function: linear;
+   
 }
