--- a/front/site/quiz/css-quiz/animations-css/nordica.css
+++ b/front/site/quiz/css-quiz/animations-css/nordica.css
@@ -546,3 +546,19 @@ input[type=radio] {
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
+#fim {
+    display: none;
+}
+
+#fim > h1 {
+    margin-top: 50px;
+    text-transform: uppercase;
+    font-size: 2em;
+    text-align: center;
+}
+
+#fim > p {
+    margin-top: 30px;
+    font-size: 1.5em;
+    text-align: center;
+}
