--- a/front/site/quiz/css-quiz/animations-css/nordica.css
+++ b/front/site/quiz/css-quiz/animations-css/nordica.css
@@ -258,7 +258,7 @@ ul li ul.dropdown a:hover {
 }
 
 #introducao {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -266,6 +266,7 @@ ul li ul.dropdown a:hover {
     margin-left: 13%;
     margin-right: 14%;
 }
+
 .tamanhoInputOriginal {
     width: 50px;
     height: 45px;
@@ -366,10 +367,12 @@ ul li ul.dropdown a:hover {
     text-align: center;
 
 }
+
 #acertos {
     background-color: #1efa0b;
     display: inline;
 }
+
 #classificacao {
     display: grid;
     display: inline;
@@ -396,6 +399,23 @@ ul li ul.dropdown a:hover {
     font-size: 18px;
     border-radius: 37px;
     cursor: pointer;
+}
+
+.radio-container {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 1fr;
+    align-items: center;
+}
+
+.radio-container>input {
+    display: grid;
+}
+
+.radio-container>label {
+    display: grid;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 label {
@@ -501,7 +521,7 @@ input[type=radio] {
 #secao-pergunta-4 {
     display: none;
     grid-template-areas:
-    "informacoes" "alternativas";
+        "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
 
@@ -509,60 +529,67 @@ input[type=radio] {
     top: 50px;
     position: relative;
 }
+
 /*Pergunta 5*/
 #secao-pergunta-5 {
-    display: none;
+    display: grid;
     grid-template-areas:
-    "informacoes" "alternativas";
+        "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
+
 /*Pergunta 6*/
 #secao-pergunta-6 {
     display: none;
     grid-template-areas:
-    "informacoes" "alternativas";
+        "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
+
 /*Pergunta 7*/
 #secao-pergunta-7 {
     display: none;
-    grid-template-areas: 
-    "informacoes" "alternativas";
+    grid-template-areas:
+        "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
+
 /*Pergunta 8*/
 #secao-pergunta-8 {
     display: none;
-    grid-template-areas: 
-    "informacoes" "alternativas";
+    grid-template-areas:
+        "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
+
 /*Pergunta 9*/
 #secao-pergunta-9 {
     display: none;
-    grid-template-areas: 
-    "informacoes" "alternativas";
+    grid-template-areas:
+        "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
+
 /*Pergunta 10*/
 #secao-pergunta-10 {
     display: none;
-    grid-template-areas: 
-    "informacoes" "alternativas";
+    grid-template-areas:
+        "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
+
 #fim {
     display: none;
 }
 
-#fim > h1 {
+#fim>h1 {
     margin-top: 50px;
     text-transform: uppercase;
     font-size: 2em;
     text-align: center;
 }
 
-#fim > p {
+#fim>p {
     margin-top: 30px;
     font-size: 1.5em;
     text-align: center;
