--- a/front/site/paginas/css/style.css
+++ b/front/site/paginas/css/style.css
@@ -104,6 +104,10 @@ footer {
     height: auto;
 }
 
+.ul-footer > ul, .ul-footer > li {
+    display: block !important;
+}
+
 .footer-container {
     padding: 20px;
     max-width: 1500px;
