--- a/front/site/paginas/css/style.css
+++ b/front/site/paginas/css/style.css
@@ -366,7 +366,7 @@ ul li ul.dropdown a:hover {
     padding: 8px 8px;
 }
 
-#margin-top-dropdown:hover::after, #linkJaponesa:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after, #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after, #linkGrega:hover::after {
+#margin-top-dropdown:hover::after, #linkJaponesa:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after, #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after, #linkGrecia:hover::after {
     content: "";
     height: 2px;
     background-color: pink;
