--- a/front/site/paginas/css/index.css
+++ b/front/site/paginas/css/index.css
@@ -91,7 +91,7 @@
     background: #BF4E4E;
 }
 .conteudo .caixa:nth-of-type(4){
-    background: #036d03;
+    background: #169b62;
 }
 .conteudo .caixa:nth-of-type(5){
     background:  #8C837B;
