--- a/front/site/quiz/css-quiz/animations-css/romana.css
+++ b/front/site/quiz/css-quiz/animations-css/romana.css
@@ -304,7 +304,7 @@ ul li ul.dropdown a:hover {
     margin-top: 20px;
     border: none;
     font-size: 1.5em;
-    background-color: #FF685F;
+    background-color: #A61212;
     color: #fff;
     width: 250px;
     padding: 12px;
@@ -313,7 +313,7 @@ ul li ul.dropdown a:hover {
 }
 
 #introducao > input[type=button]:hover {
-    box-shadow: 0 0 4px #A61212;
+    box-shadow: 2px 0px 10px #FF685F;
 }
 
 
