--- a/front/site/paginas/css/style.css
+++ b/front/site/paginas/css/style.css
@@ -73,6 +73,8 @@ header {
     align-items: center;
     text-align: center;
     height: 170px;
+    background-color: #01173b;
+    color: #FDFDFD;
 }
 
 header > h1{
@@ -232,7 +234,7 @@ grid-template-columns: 1fr 1fr;
 ul li a {
     display: block;
     padding: 10px 40px;
-    color: #000;
+    color: white;
     text-decoration: none;
     text-align: left;
     font-size: 16px;
@@ -248,6 +250,7 @@ ul li ul.dropdown {
     z-index: 999;
     display: none;
     margin-left: 30px;
+    background-color: #01173b;
 }
 
 ul li:hover ul.dropdown {
@@ -261,7 +264,7 @@ ul li ul.dropdown a {
 
 ul li ul.dropdown a:hover {
     opacity: 1;
-    color: #000;
+    color: white;
 }
 
 .dropdown > li > a {
@@ -286,7 +289,7 @@ ul li ul.dropdown a:hover {
 #link-home:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     margin-left: 25px;
     display: block;
     width: 70%;
@@ -333,7 +336,7 @@ ul li ul.dropdown a:hover {
 #link-quiz:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     margin-left: 25px;
     display: block;
     width: 80%;
@@ -374,7 +377,7 @@ ul li ul.dropdown a:hover {
 #margin-top-dropdown:hover::after, #linkJaponesa:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after, #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after, #linkGrecia:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     display: block;
     width: 100%;
     animation-name: dropdown-animations;
@@ -396,7 +399,7 @@ ul li ul.dropdown a:hover {
 #link-dropdown-excessao:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     display: block;
     width: 100%;
     animation-name: dropdown-excessao-animation;
@@ -417,7 +420,7 @@ ul li ul.dropdown a:hover {
 
 .saiuEgipcia::after, .saiuGeral::after, .saiuJaponesa::after, .saiuHindu::after,.saiuIrlandesa::after, .saiuNordica::after, .saiuRomana::after {
     content: "";
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     width: 100%;
     display: block;
     animation-name: sair-dropdown-animations;
