--- a/front/site/paginas/css/index.css
+++ b/front/site/paginas/css/index.css
@@ -215,7 +215,7 @@
 .aba>ul, li{
     margin: 40px;
 }
-.aba>button{
+.aba>a>button{
     font-size: 1.2em;
     font-weight: 600;
     text-transform: uppercase;
@@ -232,11 +232,12 @@
     margin: 45px;
 }
 
-.aba>button:hover{
+
+.aba>a>button:hover{
     letter-spacing: .2em;
 }
 
 hr{
     margin: 40px;
-    border: 1px solid;
+    border: 1px solid; 
 }
